--- a/w2_bio/index.html
+++ b/w2_bio/index.html
@@ -11,7 +11,7 @@
 
         <div id="header">            
 
-            <h1><i>Daniel DeLuca</h1><i>
+            <h1><i>Daniel DeLuca</i></h1>
 
         <div id="nav">
            
