--- a/w3_bio/bio.html
+++ b/w3_bio/bio.html
@@ -105,8 +105,12 @@
         </div> <!--nav-->
         <div id="content" class="border">
 
-            <h2>Content for <b>HOME</b></h2>
+            <h2>Content for <b>BIO</b></h2>
 
+            <h3>My Biography</h2>
+                    <p>Hi! Some info about me...
+                        My name is <b>Dan</b>. I am from Barrington, RI. This is my second term at <strong>NEIT</strong>. I enjoy working out, watching <u>basketball</u>, and the <em>UFC</em>. Fun fact: I am Brads favorite person:)
+                        <br>
             <a href="https://www.espn.com/nba/scoreboard" target="_blank">
                 <img src="image/LinkedinDAN.jpg" alt="ME" width="400px">
                 
