--- a/w3_bio/hobbies.html
+++ b/w3_bio/hobbies.html
@@ -105,10 +105,15 @@
         </div> <!--nav-->
         <div id="content" class="border">
 
-            <h2>Content for <b>HOME</b></h2>
+            <h2>Content for <b>Hobbies</b></h2>
 
             <a href="https://www.espn.com/nba/scoreboard" target="_blank">
-                <img src="image/LinkedinDAN.jpg" alt="ME" width="400px">
+                <h3>I love Basketball</h3>
+                <img src="image/Jayson tatum.jpg" alt="ME" width="400px">
+                <h4>I love the UFC</h4>
+                <img src="image/UFC.jpg" alt="UFC" width="400px">
+                <h5>I love Golf</h5>
+                <img src="image/tiger woods.webp" alt="Golf" width="400px">
                 
 
 
