--- a/w3_bio/hobbies.html
+++ b/w3_bio/hobbies.html
@@ -56,7 +56,7 @@
         border:2px solid darkslategray;
         
         }
-        #footer, #header, #nav{
+        #footer, #header, #nav, #content{
             text-align:center;
         }
 
