--- a/w3_bio/hobbies.html
+++ b/w3_bio/hobbies.html
@@ -131,7 +131,7 @@
        
             <p>&copy; D DELUCA | SE111.02 | <spam class="fancy">202340</spam></p>
             <br>
-            <a href="index.html#header">| Top of the Home Page</a>
+            <a href="hobbies.html">| Top of the Page</a>
         </div> <!--footer-->
    
     </div> <!--wrapper-->
