--- a/w3_bio/bio.html
+++ b/w3_bio/bio.html
@@ -130,7 +130,7 @@
        
             <p>&copy; D DELUCA | SE111.02 | <spam class="fancy">202340</spam></p>
             <br>
-            <a href="index.html#header">| Top of the Home Page</a>
+            <a href="bio.html">| Top of the Page</a>
         </div> <!--footer-->
    
     </div> <!--wrapper-->
