--- a/w3_bio/schools.html
+++ b/w3_bio/schools.html
@@ -137,7 +137,7 @@
        
             <p>&copy; D DELUCA | SE111.02 | <spam class="fancy">202340</spam></p>
             <br>
-            <a href="index.html#header">| Top of the Home Page</a>
+            <a href="schools.html">| Top of the Page</a>
         </div> <!--footer-->
    
     </div> <!--wrapper-->
